Add authorization to open api spec

--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
   "gemSummary": "Budgea API Documentation Ruby Gem",
   "gemDescription": "Budgea API Documentation Ruby Gem",
   "gemHomepage": "https://github.com/cashbee-team/budgea_client",
-  "moduleName": "BudgeaClient"
+  "moduleName": "BudgeaClient",
+  "gemLicense": "Apache 2.0"
 }
